# docs/swagger.yaml
@@ -1,10 +1,35 @@
+basePath: /shumingyu
 definitions:
   shuming.ErrorResponse:
+    properties:
+      message:
+        type: string
     type: object
   shuming.UserResponse:
+    properties:
+      data:
+        type: string
+      msg:
+        type: string
+      record:
+        type: integer
     type: object
+externalDocs:
+  description: OpenAPI
+  url: https://swagger.io/resources/open-api/
+host: 127.0.0.1:6620
 info:
-  contact: {}
+  contact:
+    email: support@swagger.io
+    name: API Support
+    url: http://www.swagger.io/support
+  description: This is a sample server celler server.
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  termsOfService: http://swagger.io/terms/
+  title: 書銘的API
+  version: "1.0"
 paths:
   /shumingyu/alluser:
     get:
@@ -31,15 +56,11 @@ paths:
       description: 增加User的資料
       parameters:
       - description: 帳號
-        in: path
+        in: body
         name: account
         required: true
-        type: string
-      - description: 使用者名稱
-        in: path
-        name: name
-        required: true
-        type: string
+        schema:
+          type: string
       produces:
       - application/json
       responses:
@@ -73,4 +94,7 @@ paths:
       summary: 測試
       tags:
       - Users
+securityDefinitions:
+  BasicAuth:
+    type: basic
 swagger: "2.0"
